; ModuleID = '/home/carl/AnghaBench/tig/src/extr_refdb.c_foreach_ref.c'
source_filename = "/home/carl/AnghaBench/tig/src/extr_refdb.c_foreach_ref.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ref_visitor_data = type { i8*, i32 }

@refs_by_name = common dso_local global i32 0, align 4
@foreach_ref_visitor = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @foreach_ref(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca %struct.ref_visitor_data, align 8
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %6 = getelementptr inbounds %struct.ref_visitor_data, %struct.ref_visitor_data* %5, i32 0, i32 0
  %7 = load i32, i32* %3, align 4
  %8 = sext i32 %7 to i64
  %9 = inttoptr i64 %8 to i8*
  store i8* %9, i8** %6, align 8
  %10 = getelementptr inbounds %struct.ref_visitor_data, %struct.ref_visitor_data* %5, i32 0, i32 1
  %11 = load i8*, i8** %4, align 8
  %12 = ptrtoint i8* %11 to i32
  store i32 %12, i32* %10, align 8
  %13 = load i32, i32* @foreach_ref_visitor, align 4
  %14 = call i32 @string_map_foreach(i32* @refs_by_name, i32 %13, %struct.ref_visitor_data* %5)
  ret void
}

declare dso_local i32 @string_map_foreach(i32*, i32, %struct.ref_visitor_data*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
